--- a/modules/flexbox/index.css
+++ b/modules/flexbox/index.css
@@ -1,61 +1,91 @@
+.row { 
+  display: flex;
 
-.flex { display: flex }
+  /* Vertical Alignment */
+  &.-top {
+    align-items: flex-start;
+  }
+  
+  &.-middle {
+    align-items: center;
+  }
+  
+  &.-bottom {
+    align-items: flex-end;
+  }
+  
+  &.-stretch {
+    align-items: stretch;
+  }
 
-@media (--breakpoint-sm) {
-  .sm-flex { display: flex }
+  &.-baseline {
+    align-items: baseline;
+  }
+
+  /* Horizontal Alignment */
+  &.-left {
+    justify-content: flex-start;
+  }
+
+  &.-center {
+    justify-content: center;
+  }
+
+  &.-right {
+    justify-content: flex-end;
+  }
+
+  &.-space-between {
+    justify-content: space-between;
+  }
+
+  &.-wrap {
+    flex-wrap: wrap;
+  }
 }
 
-@media (--breakpoint-md) {
-  .md-flex { display: flex }
+.column  {
+  display: flex;
+  flex-direction: column;
+
+  display: flex;
+  flex-direction: column;
+
+  /* Vertical Alignment */
+  &.-top {
+    justify-content: flex-start;
+  }
+  
+  &.-middle {
+    justify-content: center;
+  }
+  
+  &.-bottom {
+    justify-content: flex-end;
+  }
+
+  &.-space-between {
+    justify-content: space-between;
+  }
+  
+  /* Horizontal Alignment */
+  &.-left {
+    align-items: flex-start;
+  }
+
+  &.-center {
+    align-items: center;
+  }
+
+  &.-right {
+    align-items: flex-end;
+  }
+
+  &.-stretch {
+    align-items: stretch;
+  }
+
+  &.-wrap {
+    flex-wrap: wrap;
+  }
 }
-
-@media (--breakpoint-lg) {
-  .lg-flex { display: flex }
-}
-
-.flex-column  { flex-direction: column }
-.flex-wrap    { flex-wrap: wrap }
-
-.items-start    { align-items: flex-start }
-.items-end      { align-items: flex-end }
-.items-center   { align-items: center }
-.items-baseline { align-items: baseline }
-.items-stretch  { align-items: stretch }
-
-.self-start    { align-self: flex-start }
-.self-end      { align-self: flex-end }
-.self-center   { align-self: center }
-.self-baseline { align-self: baseline }
-.self-stretch  { align-self: stretch }
-
-.justify-start   { justify-content: flex-start }
-.justify-end     { justify-content: flex-end }
-.justify-center  { justify-content: center }
-.justify-between { justify-content: space-between }
-.justify-around  { justify-content: space-around }
-
-.content-start   { align-content: flex-start }
-.content-end     { align-content: flex-end }
-.content-center  { align-content: center }
-.content-between { align-content: space-between }
-.content-around  { align-content: space-around }
-.content-stretch { align-content: stretch }
-
-/* 1. Fix for Chrome 44 bug. https://code.google.com/p/chromium/issues/detail?id=506893 */
-.flex-auto {
-  flex: 1 1 auto;
-  min-width: 0; /* 1 */
-  min-height: 0; /* 1 */
-}
-.flex-none { flex: none }
-
-.order-0 { order: 0 }
-.order-1 { order: 1 }
-.order-2 { order: 2 }
-.order-3 { order: 3 }
-.order-last { order: 99999 }
-
-@custom-media --breakpoint-sm (min-width: 40em);
-@custom-media --breakpoint-md (min-width: 52em);
-@custom-media --breakpoint-lg (min-width: 64em);
-
