--- a/modules/flexbox/index.css
+++ b/modules/flexbox/index.css
@@ -1,50 +1,38 @@
+@custom-media --breakpoint-sm (min-width: 40em);
+@custom-media --breakpoint-md (min-width: 52em);
+@custom-media --breakpoint-lg (min-width: 64em);
+
 .row { 
   display: flex;
 
   /* Vertical Alignment */
-  &.-top {
-    align-items: flex-start;
-  }
-  
-  &.-middle {
-    align-items: center;
-  }
-  
-  &.-bottom {
-    align-items: flex-end;
-  }
-  
-  &.-stretch {
-    align-items: stretch;
-  }
-
-  &.-baseline {
-    align-items: baseline;
-  }
+  &.-top { align-items: flex-start }
+  &.-middle { align-items: center }
+  &.-bottom { align-items: flex-end }
+  &.-stretch { align-items: stretch }
+  &.-baseline { align-items: baseline }
 
   /* Horizontal Alignment */
-  &.-left {
-    justify-content: flex-start;
+  &.-left { justify-content: flex-start }
+  &.-center { justify-content: center }
+  &.-right { justify-content: flex-end }
+  &.-space-between { justify-content: space-between }
+  &.-space-around { justify-content: space-around }
+  &.-wrap { flex-wrap: wrap }
+
+  @media (--breakpoint-sm) {
+    &.-sm-wrap { flex-wrap: wrap }
+    &.-sm-nowrap { flex-wrap: nowrap }
   }
 
-  &.-center {
-    justify-content: center;
+  @media (--breakpoint-md) {
+    &.-md-wrap { flex-wrap: wrap }
+    &.-md-nowrap { flex-wrap: nowrap }
   }
 
-  &.-right {
-    justify-content: flex-end;
-  }
-
-  &.-space-between {
-    justify-content: space-between;
-  }
-
-  &.-space-around {
-    justify-content: space-around;
-  }
-
-  &.-wrap {
-    flex-wrap: wrap;
+  @media (--breakpoint-lg) {
+    &.-lg-wrap { flex-wrap: wrap }
+    &.-lg-nowrap { flex-wrap: nowrap }
   }
 }
 
@@ -52,49 +40,33 @@
   display: flex;
   flex-direction: column;
 
-  display: flex;
-  flex-direction: column;
-
   /* Vertical Alignment */
-  &.-top {
-    justify-content: flex-start;
-  }
-  
-  &.-middle {
-    justify-content: center;
-  }
-  
-  &.-bottom {
-    justify-content: flex-end;
-  }
-
-  &.-space-between {
-    justify-content: space-between;
-  }
-
-  &.-space-around {
-    justify-content: space-around;
-  }
+  &.-top { justify-content: flex-start }
+  &.-middle { justify-content: center }
+  &.-bottom { justify-content: flex-end }
+  &.-space-between { justify-content: space-between }
+  &.-space-around { justify-content: space-around }
   
   /* Horizontal Alignment */
-  &.-left {
-    align-items: flex-start;
+  &.-left { align-items: flex-start }
+  &.-center { align-items: center }
+  &.-right { align-items: flex-end }
+  &.-stretch { align-items: stretch }
+  &.-wrap { flex-wrap: wrap }
+
+  @media (--breakpoint-sm) {
+    &.-sm-wrap { flex-wrap: wrap }
+    &.-sm-nowrap { flex-wrap: nowrap }
   }
 
-  &.-center {
-    align-items: center;
+  @media (--breakpoint-md) {
+    &.-md-wrap { flex-wrap: wrap }
+    &.-md-nowrap { flex-wrap: nowrap }
   }
 
-  &.-right {
-    align-items: flex-end;
-  }
-
-  &.-stretch {
-    align-items: stretch;
-  }
-
-  &.-wrap {
-    flex-wrap: wrap;
+  @media (--breakpoint-lg) {
+    &.-lg-wrap { flex-wrap: wrap }
+    &.-lg-nowrap { flex-wrap: nowrap }
   }
 }
 
