--- a/modules/grid/lib/grid.css
+++ b/modules/grid/lib/grid.css
@@ -1,83 +1,77 @@
-
-.col {
-  float: left;
-  box-sizing: border-box;
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, 
+.col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+  box-sizing: border-box
 }
 
-.col-right {
-  float: right;
-  box-sizing: border-box;
-}
+.col-1 { flex-basis: calc(1/12 * 100%) }
+.col-2 { flex-basis: calc(2/12 * 100%) }
+.col-3 { flex-basis: calc(3/12 * 100%) }
+.col-4 { flex-basis: calc(4/12 * 100%) }
+.col-5 { flex-basis: calc(5/12 * 100%) }
+.col-6 { flex-basis: calc(6/12 * 100%) }
+.col-7 { flex-basis: calc(7/12 * 100%) }
+.col-8 { flex-basis: calc(8/12 * 100%) }
+.col-9 { flex-basis: calc(9/12 * 100%) }
+.col-10 { flex-basis: calc(10/12 * 100%) }
+.col-11 { flex-basis: calc(11/12 * 100%) }
+.col-12 { flex-basis: 100% }
 
-.col-1 {
-  width: calc(1/12 * 100%);
-  flex-basis: calc(1/12 * 100%);
-  box-sizing: border-box;
-}
 
-.col-2 {
-  width: calc(2/12 * 100%);
-  flex-basis: calc(2/12 * 100%);
-  box-sizing: border-box;
-}
+.mcx1 > .col-1 { flex-basis: calc(1/12 * 100% - var(--space-1)) }
+.mcx1 > .col-2 { flex-basis: calc(2/12 * 100% - var(--space-1)) }
+.mcx1 > .col-3 { flex-basis: calc(3/12 * 100% - var(--space-1)) }
+.mcx1 > .col-4 { flex-basis: calc(4/12 * 100% - var(--space-1)) }
+.mcx1 > .col-5 { flex-basis: calc(5/12 * 100% - var(--space-1)) }
+.mcx1 > .col-6 { flex-basis: calc(6/12 * 100% - var(--space-1)) }
+.mcx1 > .col-7 { flex-basis: calc(7/12 * 100% - var(--space-1)) }
+.mcx1 > .col-8 { flex-basis: calc(8/12 * 100% - var(--space-1)) }
+.mcx1 > .col-9 { flex-basis: calc(9/12 * 100% - var(--space-1)) }
+.mcx1 > .col-10 { flex-basis: calc(10/12 * 100% - var(--space-1)) }
+.mcx1 > .col-11 { flex-basis: calc(11/12 * 100% - var(--space-1)) }
+.mcx1 > .col-12 { flex-basis: calc(100% - var(--space-1)) }
 
-.col-3 {
-  width: calc(3/12 * 100%);
-  flex-basis: calc(3/12 * 100%);
-  box-sizing: border-box;
-}
+.mcx2 > .col-1 { flex-basis: calc(1/12 * 100% - var(--space-2)) }
+.mcx2 > .col-2 { flex-basis: calc(2/12 * 100% - var(--space-2)) }
+.mcx2 > .col-3 { flex-basis: calc(3/12 * 100% - var(--space-2)) }
+.mcx2 > .col-4 { flex-basis: calc(4/12 * 100% - var(--space-2)) }
+.mcx2 > .col-5 { flex-basis: calc(5/12 * 100% - var(--space-2)) }
+.mcx2 > .col-6 { flex-basis: calc(6/12 * 100% - var(--space-2)) }
+.mcx2 > .col-7 { flex-basis: calc(7/12 * 100% - var(--space-2)) }
+.mcx2 > .col-8 { flex-basis: calc(8/12 * 100% - var(--space-2)) }
+.mcx2 > .col-9 { flex-basis: calc(9/12 * 100% - var(--space-2)) }
+.mcx2 > .col-10 { flex-basis: calc(10/12 * 100% - var(--space-2)) }
+.mcx2 > .col-11 { flex-basis: calc(11/12 * 100% - var(--space-2)) }
+.mcx2 > .col-12 { flex-basis: calc(100% - var(--space-2)) }
 
-.col-4 {
-  width: calc(4/12 * 100%);
-  flex-basis: calc(4/12 * 100%);
-  box-sizing: border-box;
-}
+.mcx3 > .col-1 { flex-basis: calc(1/12 * 100% - var(--space-3)) }
+.mcx3 > .col-2 { flex-basis: calc(2/12 * 100% - var(--space-3)) }
+.mcx3 > .col-3 { flex-basis: calc(3/12 * 100% - var(--space-3)) }
+.mcx3 > .col-4 { flex-basis: calc(4/12 * 100% - var(--space-3)) }
+.mcx3 > .col-5 { flex-basis: calc(5/12 * 100% - var(--space-3)) }
+.mcx3 > .col-6 { flex-basis: calc(6/12 * 100% - var(--space-3)) }
+.mcx3 > .col-7 { flex-basis: calc(7/12 * 100% - var(--space-3)) }
+.mcx3 > .col-8 { flex-basis: calc(8/12 * 100% - var(--space-3)) }
+.mcx3 > .col-9 { flex-basis: calc(9/12 * 100% - var(--space-3)) }
+.mcx3 > .col-10 { flex-basis: calc(10/12 * 100% - var(--space-3)) }
+.mcx3 > .col-11 { flex-basis: calc(11/12 * 100% - var(--space-3)) }
+.mcx3 > .col-12 { flex-basis: calc(100% - var(--space-3)) }
 
-.col-5 {
-  width: calc(5/12 * 100%);
-  flex-basis: calc(5/12 * 100%);
-  box-sizing: border-box;
-}
+.mcx4 > .col-1 { flex-basis: calc(1/12 * 100% - var(--space-4)) }
+.mcx4 > .col-2 { flex-basis: calc(2/12 * 100% - var(--space-4)) }
+.mcx4 > .col-3 { flex-basis: calc(3/12 * 100% - var(--space-4)) }
+.mcx4 > .col-4 { flex-basis: calc(4/12 * 100% - var(--space-4)) }
+.mcx4 > .col-5 { flex-basis: calc(5/12 * 100% - var(--space-4)) }
+.mcx4 > .col-6 { flex-basis: calc(6/12 * 100% - var(--space-4)) }
+.mcx4 > .col-7 { flex-basis: calc(7/12 * 100% - var(--space-4)) }
+.mcx4 > .col-8 { flex-basis: calc(8/12 * 100% - var(--space-4)) }
+.mcx4 > .col-9 { flex-basis: calc(9/12 * 100% - var(--space-4)) }
+.mcx4 > .col-10 { flex-basis: calc(10/12 * 100% - var(--space-4)) }
+.mcx4 > .col-11 { flex-basis: calc(11/12 * 100% - var(--space-4)) }
+.mcx4 > .col-12 { flex-basis: calc(100% - var(--space-4)) }
 
-.col-6 {
-  width: calc(6/12 * 100%);
-  flex-basis: calc(6/12 * 100%);
-  box-sizing: border-box;
+:root {
+  --space-1: .5rem;
+  --space-2: 1rem;
+  --space-3: 2rem;
+  --space-4: 4rem;
 }
-
-.col-7 {
-  width: calc(7/12 * 100%);
-  flex-basis: calc(7/12 * 100%);
-  box-sizing: border-box;
-}
-
-.col-8 {
-  width: calc(8/12 * 100%);
-  flex-basis: calc(8/12 * 100%);
-  box-sizing: border-box;
-}
-
-.col-9 {
-  width: calc(9/12 * 100%);
-  flex-basis: calc(9/12 * 100%);
-  box-sizing: border-box;
-}
-
-.col-10 {
-  width: calc(10/12 * 100%);
-  flex-basis: calc(10/12 * 100%);
-  box-sizing: border-box;
-}
-
-.col-11 {
-  width: calc(11/12 * 100%);
-  flex-basis: calc(11/12 * 100%);
-  box-sizing: border-box;
-}
-
-.col-12 {
-  width: 100%;
-  flex-basis: 100%;
-  box-sizing: border-box;
-}
-
