--- a/modules/grid/lib/lg-grid.css
+++ b/modules/grid/lib/lg-grid.css
@@ -1,86 +1,79 @@
 
 @media (--breakpoint-lg) {
-
-  .lg-col {
-    float: left;
-    box-sizing: border-box;
+  .lg-col-1, .lg-col-2, .lg-col-3, .lg-col-4, .lg-col-5, .lg-col-6, 
+  .lg-col-7, .lg-col-8, .lg-col-9, .lg-col-10, .lg-col-11, .lg-col-12 {
+    box-sizing: border-box
   }
 
-  .lg-col-right {
-    float: right;
-    box-sizing: border-box;
-  }
+  .lg-col-1 { flex-basis: calc(1/12 * 100%) }
+  .lg-col-2 { flex-basis: calc(2/12 * 100%) }
+  .lg-col-3 { flex-basis: calc(3/12 * 100%) }
+  .lg-col-4 { flex-basis: calc(4/12 * 100%) }
+  .lg-col-5 { flex-basis: calc(5/12 * 100%) }
+  .lg-col-6 { flex-basis: calc(6/12 * 100%) }
+  .lg-col-7 { flex-basis: calc(7/12 * 100%) }
+  .lg-col-8 { flex-basis: calc(8/12 * 100%) }
+  .lg-col-9 { flex-basis: calc(9/12 * 100%) }
+  .lg-col-10 { flex-basis: calc(10/12 * 100%) }
+  .lg-col-11 { flex-basis: calc(11/12 * 100%) }
+  .lg-col-12 { flex-basis: 100% }
 
-  .lg-col-1 {
-    width: calc(1/12 * 100%);
-    flex-basis: calc(1/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx1 > .lg-col-1 { flex-basis: calc(1/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-2 { flex-basis: calc(2/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-3 { flex-basis: calc(3/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-4 { flex-basis: calc(4/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-5 { flex-basis: calc(5/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-6 { flex-basis: calc(6/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-7 { flex-basis: calc(7/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-8 { flex-basis: calc(8/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-9 { flex-basis: calc(9/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-10 { flex-basis: calc(10/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-11 { flex-basis: calc(11/12 * 100% - var(--space-1)) }
+  .mcx1 > .lg-col-12 { flex-basis: calc(100% - var(--space-1)) }
 
-  .lg-col-2 {
-    width: calc(2/12 * 100%);
-    flex-basis: calc(2/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx2 > .lg-col-1 { flex-basis: calc(1/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-2 { flex-basis: calc(2/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-3 { flex-basis: calc(3/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-4 { flex-basis: calc(4/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-5 { flex-basis: calc(5/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-6 { flex-basis: calc(6/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-7 { flex-basis: calc(7/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-8 { flex-basis: calc(8/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-9 { flex-basis: calc(9/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-10 { flex-basis: calc(10/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-11 { flex-basis: calc(11/12 * 100% - var(--space-2)) }
+  .mcx2 > .lg-col-12 { flex-basis: calc(100% - var(--space-2)) }
 
-  .lg-col-3 {
-    width: calc(3/12 * 100%);
-    flex-basis: calc(3/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx3 > .lg-col-1 { flex-basis: calc(1/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-2 { flex-basis: calc(2/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-3 { flex-basis: calc(3/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-4 { flex-basis: calc(4/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-5 { flex-basis: calc(5/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-6 { flex-basis: calc(6/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-7 { flex-basis: calc(7/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-8 { flex-basis: calc(8/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-9 { flex-basis: calc(9/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-10 { flex-basis: calc(10/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-11 { flex-basis: calc(11/12 * 100% - var(--space-3)) }
+  .mcx3 > .lg-col-12 { flex-basis: calc(100% - var(--space-3)) }
 
-  .lg-col-4 {
-    width: calc(4/12 * 100%);
-    flex-basis: calc(4/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-5 {
-    width: calc(5/12 * 100%);
-    flex-basis: calc(5/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-6 {
-    width: calc(6/12 * 100%);
-    flex-basis: calc(6/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-7 {
-    width: calc(7/12 * 100%);
-    flex-basis: calc(7/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-8 {
-    width: calc(8/12 * 100%);
-    flex-basis: calc(8/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-9 {
-    width: calc(9/12 * 100%);
-    flex-basis: calc(9/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-10 {
-    width: calc(10/12 * 100%);
-    flex-basis: calc(10/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-11 {
-    width: calc(11/12 * 100%);
-    flex-basis: calc(11/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .lg-col-12 {
-    width: 100%;
-    flex-basis: 100%;
-    box-sizing: border-box;
-  }
+  .mcx4 > .lg-col-1 { flex-basis: calc(1/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-2 { flex-basis: calc(2/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-3 { flex-basis: calc(3/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-4 { flex-basis: calc(4/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-5 { flex-basis: calc(5/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-6 { flex-basis: calc(6/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-7 { flex-basis: calc(7/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-8 { flex-basis: calc(8/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-9 { flex-basis: calc(9/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-10 { flex-basis: calc(10/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-11 { flex-basis: calc(11/12 * 100% - var(--space-4)) }
+  .mcx4 > .lg-col-12 { flex-basis: calc(100% - var(--space-4)) }
 }
 
+:root {
+  --space-1: .5rem;
+  --space-2: 1rem;
+  --space-3: 2rem;
+  --space-4: 4rem;
+}
