--- a/modules/grid/lib/sm-grid.css
+++ b/modules/grid/lib/sm-grid.css
@@ -1,87 +1,78 @@
-
 @media (--breakpoint-sm) {
-
-  .sm-col {
-    float: left;
-    box-sizing: border-box;
+  .sm-col-1, .sm-col-2, .sm-col-3, .sm-col-4, .sm-col-5, .sm-col-6, 
+  .sm-col-7, .sm-col-8, .sm-col-9, .sm-col-10, .sm-col-11, .sm-col-12 {
+    box-sizing: border-box
   }
 
-  .sm-col-right {
-    float: right;
-    box-sizing: border-box;
-  }
+  .sm-col-1 { flex-basis: calc(1/12 * 100%) }
+  .sm-col-2 { flex-basis: calc(2/12 * 100%) }
+  .sm-col-3 { flex-basis: calc(3/12 * 100%) }
+  .sm-col-4 { flex-basis: calc(4/12 * 100%) }
+  .sm-col-5 { flex-basis: calc(5/12 * 100%) }
+  .sm-col-6 { flex-basis: calc(6/12 * 100%) }
+  .sm-col-7 { flex-basis: calc(7/12 * 100%) }
+  .sm-col-8 { flex-basis: calc(8/12 * 100%) }
+  .sm-col-9 { flex-basis: calc(9/12 * 100%) }
+  .sm-col-10 { flex-basis: calc(10/12 * 100%) }
+  .sm-col-11 { flex-basis: calc(11/12 * 100%) }
+  .sm-col-12 { flex-basis: 100% }
 
-  .sm-col-1 {
-    width: calc(1/12 * 100%);
-    flex-basis: calc(1/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx1 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-1)) }
+  .mcx1 > .sm-col-12 { flex-basis: calc(100% - var(--space-1)) }
 
-  .sm-col-2 {
-    width: calc(2/12 * 100%);
-    flex-basis: calc(2/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx2 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-2)) }
+  .mcx2 > .sm-col-12 { flex-basis: calc(100% - var(--space-2)) }
 
-  .sm-col-3 {
-    width: calc(3/12 * 100%);
-    flex-basis: calc(3/12 * 100%);
-    box-sizing: border-box;
-  }
+  .mcx3 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-3)) }
+  .mcx3 > .sm-col-12 { flex-basis: calc(100% - var(--space-3)) }
 
-  .sm-col-4 {
-    width: calc(4/12 * 100%);
-    flex-basis: calc(4/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-5 {
-    width: calc(5/12 * 100%);
-    flex-basis: calc(5/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-6 {
-    width: calc(6/12 * 100%);
-    flex-basis: calc(6/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-7 {
-    width: calc(7/12 * 100%);
-    flex-basis: calc(7/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-8 {
-    width: calc(8/12 * 100%);
-    flex-basis: calc(8/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-9 {
-    width: calc(9/12 * 100%);
-    flex-basis: calc(9/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-10 {
-    width: calc(10/12 * 100%);
-    flex-basis: calc(10/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-11 {
-    width: calc(11/12 * 100%);
-    flex-basis: calc(11/12 * 100%);
-    box-sizing: border-box;
-  }
-
-  .sm-col-12 {
-    width: 100%;
-    flex-basis: 100%;
-    box-sizing: border-box;
-  }
-
+  .mcx4 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-4)) }
+  .mcx4 > .sm-col-12 { flex-basis: calc(100% - var(--space-4)) }
 }
 
+:root {
+  --space-1: .5rem;
+  --space-2: 1rem;
+  --space-3: 2rem;
+  --space-4: 4rem;
+}
