--- a/modules/flexbox/index.css
+++ b/modules/flexbox/index.css
@@ -73,3 +73,35 @@
 .flex-grow { flex-grow: 1 }
 .flex-shrink { flex-shrink: 1 }
 .flex-none { flex: none }
+
+
+.order-0 { order: 0 }
+.order-1 { order: 1 }
+.order-2 { order: 2 }
+.order-3 { order: 3 }
+.order-last { order: 99999 }
+
+
+@media (--breakpoint-sm) {
+  .sm-order-0 { order: 0 }
+  .sm-order-1 { order: 1 }
+  .sm-order-2 { order: 2 }
+  .sm-order-3 { order: 3 }
+  .sm-order-last { order: 99999 }
+}
+
+@media (--breakpoint-md) {
+  .md-order-0 { order: 0 }
+  .md-order-1 { order: 1 }
+  .md-order-2 { order: 2 }
+  .md-order-3 { order: 3 }
+  .md-order-last { order: 99999 }
+}
+
+@media (--breakpoint-lg) {
+  .lg-order-0 { order: 0 }
+  .lg-order-1 { order: 1 }
+  .lg-order-2 { order: 2 }
+  .lg-order-3 { order: 3 }
+  .lg-order-last { order: 99999 }
+}
