--- a/modules/grid/lib/sm-grid.css
+++ b/modules/grid/lib/sm-grid.css
@@ -68,6 +68,32 @@
   .mcx4 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-4)) }
   .mcx4 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-4)) }
   .mcx4 > .sm-col-12 { flex-basis: calc(100% - var(--space-4)) }
+
+  .mcx5 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-5)) }
+  .mcx5 > .sm-col-12 { flex-basis: calc(100% - var(--space-5)) }
+
+  .mcx6 > .sm-col-1 { flex-basis: calc(1/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-2 { flex-basis: calc(2/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-3 { flex-basis: calc(3/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-4 { flex-basis: calc(4/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-5 { flex-basis: calc(5/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-6 { flex-basis: calc(6/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-7 { flex-basis: calc(7/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-8 { flex-basis: calc(8/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-9 { flex-basis: calc(9/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-10 { flex-basis: calc(10/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-11 { flex-basis: calc(11/12 * 100% - var(--space-6)) }
+  .mcx6 > .sm-col-12 { flex-basis: calc(100% - var(--space-6)) }
 }
 
 :root {
@@ -75,4 +101,6 @@
   --space-2: 1rem;
   --space-3: 2rem;
   --space-4: 4rem;
+  --space-5: 5rem;
+  --space-6: 6rem;
 }
